<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20sp"
    android:paddingLeft="20sp"
    android:paddingTop="20sp"
    android:paddingRight="20sp"
    android:paddingBottom="20sp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="pgWeb"
        android:text="@string/txt_btn1" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="llamadaTelefono"
        android:text="@string/txt_btn2" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="googleMaps"
        android:text="@string/txt_btn3" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="tomarFoto"
        android:text="@string/txt_btn4" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="mandarCorreo"
        android:text="@string/txt_btn5" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="hacerBusqueda"
        android:text="@string/txt_btn6" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="llamadaCall"
        android:text="@string/txt_btn7" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="streetView"
        android:text="@string/txt_btn8" />
</LinearLayout>